Fixed overflow bug

--- a/src/pages/Popup/style.module.scss
+++ b/src/pages/Popup/style.module.scss
@@ -6,7 +6,6 @@
   right: 0px;
   text-align: center;
   height: 100%;
-  background-color: #242424;
 }
 
 .app-header {
@@ -22,7 +21,7 @@
 }
 
 .table {
-  margin: 16px 24px;
+  padding: 0 24px 16px 24px;
 }
 
 .attribute-name-input {
